Changed github pages repository

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -26,7 +26,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3.8.0
       with:
         deploy_key: ${{ secrets.DEPLOY_GITHUB_PAGES_KEY }}
-        external_repository: slimmer-ai/slimmer-ai.github.io
+        external_repository: sybrenjansen/sybrenjansen.github.io
         publish_branch: master
         publish_dir: ./docs/_build/html/
         destination_dir: text-scrubber
