--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         deploy_key: ${{ secrets.DEPLOY_GITHUB_PAGES_KEY }}
         external_repository: sybrenjansen/sybrenjansen.github.io
-        publish_branch: master
+        publish_branch: main
         publish_dir: ./docs/_build/html/
         destination_dir: text-scrubber
